# Wiimote-Controlled-Car

./: .autotools  .cproject  .gitignore  .project  BuildInstructions.txt  Makefile  README.rdoc  build.txt  cboard_test_gui.glade  cboard_test_gui.ui  connect.sh
src/: Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  autogen_debug.sh  autogen_release.sh  config.h.in  config.mk  configure  configure.ac  configure.scan  makedefs.mk  pc.mk
src/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
src/cboard_test_gui/: cboard_test.c
src/controlboard/: Makefile.am  Makefile.in  comm.c  comm.h  command.c  control_board.h  hardware.h  subdir.mk
src/wiicargui/: Makefile.am  Makefile.in  wiicargui.c  wiicargui.h
src/wiicarpcsim/: control_board.h  control_board_sim.c
src/wiicarutility/: Makefile  Makefile.am  Makefile.in  error_message.c  error_message.h  hardware.h  subdir.mk  timestamp.c  timestamp.h  utility.c  utility.h
src/wiimotecar/: .map  ControlTasks.c  ControlTasks.h  Makefile.am  Makefile.in  WiiMotor.c  main.c  program_info.h  subdir.mk  wiicar.h  wiicar_math.c  wiicar_math.h
